# fly-python-codespaces

./: .gitignore  README.md  app.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  install_flyctl.sh
fly_python_codespaces/: app.py
