[tool.poetry]
name = "fly-python-codespaces"
version = "0.1.0"
description = "A Python project for Fly.io using GitHub Codespaces"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fly_python_codespaces"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.0.2"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "fly_python_codespaces.app:main"